# medmodels

./: .editorconfig  .gitignore  .zenodo.json  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml  query_engine.ipynb  setup.cfg  test.py  try_mtgan.py
.devcontainer/: .env.example  .p10k.zsh  .zshrc  Dockerfile  devcontainer.json  docker-compose.devcontainer.yml  install.sh
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation_improvement.yml  feature_request.yml
.github/old/: publish-documentation.yml
.github/workflows/: coverage-badge.yml  coverage.yml  create-epic-branch.yml  docs-build-check.yml  formatting.yml  label-epic-task.yml  linting.yml  pr-comment.yml  publish-documentation.yml  publish.yml  testing.yml
crates/medmodels/: Cargo.toml
crates/medmodels-core/: Cargo.toml
crates/medmodels-core/src/: lib.rs  polars.rs  prelude.rs
crates/medmodels-core/src/errors/: graph.rs  medrecord.rs  mod.rs
crates/medmodels-core/src/medrecord/: attribute.rs  attributes.rs  group_mapping.rs  index_mapping.rs  mod.rs  polars.rs  schema.rs  value.rs  values.rs
crates/medmodels-core/src/medrecord/datatypes/: attribute.rs  mod.rs  value.rs
crates/medmodels-core/src/medrecord/example_dataset/: mod.rs
crates/medmodels-core/src/medrecord/example_dataset/synthetic_data/: README.md  diagnosis.csv  drug.csv  patient_diagnosis.csv  patient_drug.csv  patient_procedure.csv  procedure.csv
crates/medmodels-core/src/medrecord/example_dataset/synthetic_data/admissions_dataset/: admission.csv  admission_diagnosis.csv  admission_drug.csv  admission_procedure.csv  diagnosis.csv  drug.csv  event.csv  patient.csv  patient_admission.csv  patient_event.csv  procedure.csv
crates/medmodels-core/src/medrecord/example_dataset/synthetic_data/advanced_dataset/: README.md  diagnosis.csv  drug.csv  event.csv  patient.csv  patient_diagnosis.csv  patient_drug.csv  patient_event.csv  patient_procedure.csv  procedure.csv
crates/medmodels-core/src/medrecord/example_dataset/synthetic_data/simple_dataset/: README.md  patient.csv  patient_diagnosis.csv  patient_drug.csv  patient_procedure.csv
crates/medmodels-core/src/medrecord/graph/: edge.rs  mod.rs  node.rs
crates/medmodels-core/src/medrecord/overview/: mod.rs  tabled_modifiers.rs
crates/medmodels-core/src/medrecord/querying/: evaluate.rs  group_by.rs  mod.rs  operand_traits.rs  selection.rs  traits.rs  values.rs  wrapper.rs
crates/medmodels-core/src/medrecord/querying/attributes/: group_by.rs  mod.rs  operand.rs  operation.rs
crates/medmodels-core/src/medrecord/querying/edges/: group_by.rs  mod.rs  operand.rs  operation.rs  selection.rs  values.rs
crates/medmodels-core/src/medrecord/querying/group_by/: mod.rs  operand.rs  operation.rs
crates/medmodels-core/src/medrecord/querying/nodes/: group_by.rs  mod.rs  operand.rs  operation.rs  selection.rs  values.rs
crates/medmodels-core/src/medrecord/querying/operand_traits/: aggregation.rs  arithmetic.rs  comparison.rs  indexing.rs  is_type.rs  logic.rs  membership.rs  mod.rs  numeric_utils.rs  string_ops.rs  structure.rs
crates/medmodels-core/src/medrecord/querying/operation/: edge_operation.rs  mod.rs  node_operation.rs  operand.rs
crates/medmodels-core/src/medrecord/querying/values/: group_by.rs  mod.rs  operand.rs  operation.rs
crates/medmodels-core/src/medrecord/schema/: inferred.rs  mod.rs  provided.rs
crates/medmodels-pyo3-interop/: Cargo.toml  README.md
crates/medmodels-pyo3-interop/src/: conversion.rs  lib.rs  traits.rs
crates/medmodels-python/: Cargo.toml  README.md
crates/medmodels-python/src/: lib.rs  prelude.rs
crates/medmodels-python/src/medrecord/: datatype.rs  errors.rs  mod.rs  schema.rs
crates/medmodels-python/src/medrecord/querying/: mod.rs
crates/medmodels-utils/: Cargo.toml
crates/medmodels/src/: lib.rs  prelude.rs
crates/py-medmodels/: Cargo.toml
docs/: .gitignore  Makefile  conf.py  index.md  run_live_docs_server.py  serve_docs.py  sphinx_extensions.py
docs/_static/: exec_literalinclude.css  local.css
docs/api/: index.md  medrecord.md  treatment_effect.md
docs/developer_guide/: ci.md  code-style.md  docstrings.md  example_docstrings.py  index.md  internal-workflow.md  issues.md  pull-request.md  setup-and-ide.md  setup.md  versioning.md
docs/source/: conf.py
docs/user_guide/: 01_install_medmodels.md  02_medrecord.md  02_medrecord_intro.md  02a_query_engine.md  02a_schema.md  02b_query_engine.md  02b_schema.md  03_medrecord_schema.md  03_query_engine.md  03_treatment_effect.md  04_medrecord_comparer.md  04_treatment_effect.md  06_medrecord_comparer.md  getstarted.md  index.md
medmodels/: __init__.py  _medmodels.pyi
medmodels/concepts/: mce_dataclass.py  medical_concept_embedding.py  utils.py
medmodels/data_synthesis/: builder.py  builder.pyi  synthesizer.py  synthesizer.pyi  synthesizer_model.py  synthesizer_model.pyi
medmodels/dataclass/: dataclass.py
medmodels/matching/: evaluation.py  matching.py  metrics.py  neighbors.py  propensity.py
medmodels/medrecord/: __init__.py  _overview.py  builder.py  datatype.py  indexers.py  medrecord.py  overview.py  querying.py  querying.pyi  schema.py  types.py
medmodels/treatment_effect/: __init__.py  builder.py  continuous_estimators.py  estimate.py  report.py  temporal_analysis.py  treatment_effect.py
notebooks/: HSGNN.ipynb  HSGNN_new.ipynb  adequate_medrecords.ipynb  compute_evaluator_cohorts.py  demo.ipynb  evaluate_compare_cohorts.ipynb  try_hsgnn.py
rust/: Cargo.toml
rust/src/: index_mapping.rs  lib.rs  medrecord.rs  py_any_value.rs
rustmodels/: Cargo.toml  README.md
rustmodels/src/: errors.rs  gil_hash_map.rs  lib.rs  medrecord.rs
rustmodels/src/medrecord/: attribute.rs  conversion.rs  datatype.rs  errors.rs  mod.rs  overview.rs  querying.rs  schema.rs  traits.rs  value.rs
rustmodels/src/medrecord/querying/: attributes.rs  edges.rs  mod.rs  nodes.rs  operand.rs  values.rs
rustmodels/src/medrecord/schema/: inferred.rs  mod.rs  provided.rs
tests/: coverage_report.py
(+244 files in other folders)
