[metadata]
name = medmodels
version = 0.0.1
url=https://limebit.de/
description = Limebit Medmodels Package
long_description = file: README.md
long_description_content_type = text/markdown
project_urls=
    Project Board=https://github.com/limebit/medmodels/issues
    Source Code=https://github.com/limebit/medmodels

[options]
package_dir =
    =src
packages = find:
install_requires =
    numpy==1.24.2
    pandas==1.5.1
    scikit-learn==1.0.2
    networkx==2.8.8
    matplotlib==3.5.1
    seaborn==0.12.2
python_requires = >=3.9

[options.extras_require]
dev =
    ruff==0.0.238
    black==22.10.0
    matplotlib==3.5.1
tests =
    pytest==6.2.5
    pytest-mock==3.10.0

[options.packages.find]
where = src
exclude =
    tests
    examples

[tool:pytest]
python_files=test_*.py
