[package]
name = "medmodels"
version = "0.0.1"
edition = "2021"

[lib]
name = "medmodels"
crate-type = ["cdylib"]

[dependencies]
petgraph = "0.6.3"
pyo3 = "0.20.0"
polars = "0.33.2"
# This will be switched back once the new version of pyo3-polars is released
pyo3-polars = { git = "https://github.com/pola-rs/pyo3-polars.git" }
