[package]
name = "py-medmodels"
version = "0.2.0"
edition = "2021"

[lib]
name = "medmodels"
crate-type = ["cdylib"]

[dependencies]
medmodels-core = { workspace = true }
medmodels-utils = { workspace = true }

pyo3 = { version = "0.22", features = ["chrono", "extension-module"] }
pyo3-polars = "0.19.0"
polars = { workspace = true }
chrono = { workspace = true }
