[package]
name = "py-medmodels"
version = "0.3.2"
edition = "2021"

[lib]
name = "medmodels"
crate-type = ["cdylib"]

[dependencies]
medmodels-core = { workspace = true }
medmodels-utils = { workspace = true }

pyo3 = { version = "0.23", features = ["chrono", "extension-module"] }
pyo3-polars = "0.20.0"
polars = { workspace = true }
chrono = { workspace = true }
