[package]
name = "medmodels-core"
version = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = "../../README.md"

[dependencies]
medmodels-utils = { workspace = true }

polars = { workspace = true }
serde = { workspace = true }
ron = { workspace = true }
chrono = { workspace = true }
