[package]
name = "medmodels-core"
version = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = "../../README.md"

[dependencies]
medmodels-utils = { workspace = true }

polars = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
ron = "0.8.1"
roaring = "0.10.6"
