[package]
name = "medmodels-pyo3-interop"
version = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = "README.md"


[dependencies]
medmodels = { workspace = true }
medmodels-python = { workspace = true }

pyo3 = { workspace = true }
bincode = { workspace = true }
