[package]
name = "medmodels-python"
version = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = "../../README.md"

[dependencies]
medmodels = { workspace = true }

polars = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
rayon = { workspace = true }
pyo3 = { workspace = true }

pyo3-polars = "0.21.0"
numpy = "0.24.0"
bincode = "1.3.3"
