[package]
name = "medmodels"
version = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = "../../README.md"

[dependencies]
medmodels-core = { workspace = true }
medmodels-utils = { workspace = true }
